<resources>
    <string name="app_name">Ada</string>
    <string name="last_name">" Фамилия"</string>
    <string name="first_name">" Имя"</string>
    <string name="middle_name">" Отчество"</string>
    <string name="rank">" Должность"</string>
    <string name="phone_number">" Телефон"</string>
    <string name="organization">" Информация об организации"</string>
    <string name="object">" Объект доступа"</string>
    <string name="sent">"Отправить"</string>
    <string name="add">"+"</string>
    <string name="human">Пешеход</string>
    <string name="car">Машина</string>
    <string name="goal">" Цель посещения"</string>
    <string name="employee">" ФИО сотрудника"</string>
    <string name="unit">" Название подразделения"</string>
    <string name="rank_emp">" Должность сотрудника"</string>
    <string name="phone">" Телефон"</string>
    <string name="floor">" Этаж"</string>
    <string name="room">" Комната"</string>
    <string name="name_emp">" ФИО сотрудника"</string>
    <string name="rank_employee">" Должность сотрудника"</string>
</resources>
