<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" android:orientation="vertical">
    <EditText
        android:id="@+id/fioToWhom"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/fields"
        android:hint="@string/employee"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/unitToWhom"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:hint="@string/unit"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:layout_height="45dp"
        android:background="@drawable/fields"
        android:fontFamily="monospace"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/rankToWhom"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fields"
        android:hint="@string/rank_emp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        />
    <EditText
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/fields"
        android:hint="@string/phone"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:fontFamily="monospace"
        android:textSize="14sp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneToWhom"/>
    <EditText
        android:id="@+id/floor"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fields"
        android:hint="@string/floor"
        android:fontFamily="monospace"
        android:textSize="14sp"
        />
    <EditText
        android:id="@+id/room"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="10dp"
        android:background="@drawable/fields"
        android:hint="@string/room"
        android:fontFamily="monospace"
        android:textSize="14sp"
        />


</LinearLayout>