<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        tools:context=".MainActivity">



    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" tools:layout_editor_absoluteX="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
    >
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="340dp" />

            <Button android:layout_height="45dp"
                    android:layout_width="45dp"
                    android:id="@+id/button"
                    android:background="@drawable/button_add"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/add"
                android:layout_marginEnd="10dp"
                    android:layout_gravity="end"
                    tools:ignore="MissingConstraints"/>
            <EditText
                    android:layout_height="140dp"
                    android:layout_width="match_parent"
                    android:id="@+id/goal"
                    android:background="@drawable/fields"
                    tools:ignore="LabelFor"
                    android:inputType="textPersonName"
                    android:hint="@string/goal"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="25dp"
                    android:ems="10"
                    android:autofillHints="@string/goal"
            />
            <EditText
                android:layout_height="140dp"
                android:layout_width="match_parent"
                android:id="@+id/organization"
                android:background="@drawable/fields"
                tools:ignore="LabelFor"
                android:inputType="textPersonName"
                android:hint="@string/organization"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="25dp"
                android:ems="10"
                android:autofillHints="@string/organization"
                />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="25dp"
                android:autofillHints="@string/object"
                android:background="@drawable/fields"
                android:ems="10"
                android:hint="@string/object"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="0.5"
                android:text="С"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/dateFrom"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="До "
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                android:layout_weight="0.5"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/dateFor"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp" />
        </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="К кому:"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="25dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toWhom"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="От кого:"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="25dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/whoApprove"/>

            <Button
                    android:layout_height="70dp"
                    android:layout_width="200dp"
                    android:id="@+id/button2"
                    android:background="@drawable/button_send"
                    android:layout_marginTop="40sp"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="@string/sent"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:baselineAligned="false"
                    android:layout_marginBottom="15dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>